--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -4,10 +4,15 @@
   <p>Published: <%= @work.publication_year %></p>
   <p><%= @work.description %></p>
   <section>
+
     <%= link_to "Back to media ranks", root_path, class: "button" %>
-    <%= link_to "Edit", edit_work_path(@work), class: "button" %>
+    <% if session[:user_id] == @work.user_id %>
+      <%= link_to "Edit", edit_work_path(@work), class: "button" %>
+    <% end %>
     <%= link_to "Upvote", upvote_path(@work), class: "button", method: :post %>
-    <%= link_to "Delete", work_path(@work), class: "alert button", method: "delete", data: { confirm: "Are you sure?" } %>
+    <% if session[:user_id] == @work.user_id %>
+      <%= link_to "Delete", work_path(@work), class: "alert button", method: "delete", data: { confirm: "Are you sure?" } %>
+    <% end %>
   </section>
 </article>
 
